logs/codesters.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/codesters'...
Compiling './lib/python3.5/site-packages/codesters/bezier.py'...
***   File "./lib/python3.5/site-packages/codesters/bezier.py", line 18
    print x0, y0
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/codesters/environment.py'...
***   File "./lib/python3.5/site-packages/codesters/environment.py", line 301
    print ex
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/codesters/examples'...
Compiling './lib/python3.5/site-packages/codesters/run.py'...
***   File "./lib/python3.5/site-packages/codesters/run.py", line 29
    print "There is no file named "+filepath+". Please try again!"
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/codesters/sprite.py'...
***   File "./lib/python3.5/site-packages/codesters/sprite.py", line 697
    print self.get_name()
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/codesters/sprites'...
Listing './lib/python3.5/site-packages/codesters-0.0.42.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
